Fix broken css

--- a/css/all.css
+++ b/css/all.css
@@ -137,7 +137,7 @@ input::-moz-focus-inner {
 }
 
 html {
-  font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color emoji;
+  /* font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color emoji"; */
   font-size: 100%;
   color-scheme: light dark;
 }
@@ -257,6 +257,7 @@ hr {
   object-fit: cover;
   background-position: center;
   border-radius: 50%;
+}
 
 body {
   background-color: #F8F7F8;
